src/testData/analysis/addConstantsToEnum.cr
enum <error descr="Enum must have at least one constant">E</error>

end

enum <error descr="Can't add constants to enum definition">E</error>
  X
  Y
  Z
end